# Blueberry

./: .gitignore  README.md  TODO  pyproject.toml  template.py  utils.py
Common/: __init__.py  utils.py
Common/Database/: __init__.py  create_db.py  create_db.sql  drop_db.sql  utils.py
Common/Logging/: LogLib.sh  __init__.py  utils.py
Configs/: commands  crontab
Configs/prompts/: mail_prompt.txt  summary_prompt.txt
Database/: __init__.py  create_db.py  db.sqlite3-shm  db.sqlite3-wal  db_utils.py  drop_db.sql  populate_db.py  schema.sql
LLM/: __init__.py  cosine.py  main.py  parse.py  summarize.py
Logging/: utils.py
MailServer/: __init__.py  auth.py  fetch.py  main.py  reply.py
MainNode/: main.py
MainNode/LLM/: __init__.py  main.py
MainNode/MailServer/: auth.py  main.py  populate_db.py
Scripts/: DBUtil.sh  LoadEnv.sh  crontab
prompts/: mail_prompt.txt  summary_prompt.txt
