[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataset>=1.6.2",
    "huggingface-hub[cli]>=0.29.2",
    "llama-cpp-python>=0.3.8",
    "python-docx>=1.1.2",
    "pyyaml>=6.0.2",
    "torch>=2.7.0",
    "transformers>=4.50.3",
]
